--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  shared_preferences: ^0.5.7+3
+  shared_preferences: ^0.5.12
 
 
   # The following adds the Cupertino Icons font to your application.
